Prepare Playwright and replace HtmlUnit completely
+ prepare players tournament Id