@@ -18,6 +18,7 @@
         <!-- plugins -->
         <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
         <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
 
         <!-- libs -->
         <playwright.version>1.58.0</playwright.version>
@@ -188,6 +189,19 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version> <configuration>
+                <argLine>
+                    --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                    --add-opens java.base/java.time=ALL-UNNAMED
+                    --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                </argLine>
+            </configuration>
             </plugin>
         </plugins>
     </build>
